# medconb

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  Makefile  Readme.md  index.html  objects.inv  pyproject.toml
.github/workflows/: backend-ci.yml  docker-base.yml  docs.yml  frontend-ci.yml
backend/: Dockerfile  Dockerfile.base  Dockerfile.local  environment.dev.fixed.yml  environment.dev.yml  environment.prod.fixed.yml  environment.prod.yml  index.html  requirements.txt  schema.graphql
backend/helper/: data_upgrader_v14.py  migrate_ontologies.py
backend/medconb/: app.py  middleware.py  server.py  types.py
backend/medconb/domain/: __init__.py  codelist.py
backend/medconb/graphql/: mutation.py  types.py
backend/medconb/interactors/: __init__.py  auth.py  base.py  codelist.py  phenotype.py  query.py  workspace.py
backend/medconb/persistence/sqlalchemy/: cache.py  repositories.py  session.py
backend/test/api/: conftest.py  test_mutations.py  test_queries.py
backend/test/domain/: conftest.py  test_container.py
backend/test/interactors/: helper.py  test_workspace.py
backend/test/persistence/sqlalchemy/: conftest.py  test_code_repository.py  test_search.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  AppProvider.tsx  AppResetModal.tsx  AuthProvider.tsx  CodeListMenuEntry.tsx  CollectionMenuEntry.tsx  OntologyListView.tsx  OntologyViewer.tsx  RootWorkspace.tsx  UserDisplay.tsx  VirtualCodeTree.tsx  contentEditable.tsx  db.ts  graphql.ts  index.tsx  ontologyFilter.ts  syncDB.ts  syncTypes.ts  treeUtils.ts  useReset.ts  useStorePersist.tsx  versionCheck.ts
frontend/src/codelists/: CodelistDetail.tsx  CopyCodelistDialog.tsx  useCodelistActions.tsx
frontend/src/collections/: CloneCollectionDialog.tsx  CollectionDetail.tsx  useCollectionActions.tsx
frontend/src/import/: ImportFromFile.tsx
frontend/src/phenotypes/: CodelistTable.tsx  usePhenotypeActions.tsx
frontend/src/search/: SearchResults.tsx
frontend/src/store/: workspace.ts
frontend/src/utils/: timer.ts
search/: search_index.json
