[project]
name = "medconb"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "argon2-cffi",
    "ariadne==0.26.*",
    "authlib",
    "confuse",
    "pandas",
    "plyse==1.0.3",
    "psycopg2-binary",
    "pydantic==2.*",
    "pyjwt==2.8.0",
    "pyparsing==2.4.0",
    "pyyaml",
    "redis",
    "requests",
    "sqlalchemy==2.0.*",
    "starlette",
    "starlette-context",
    "uvicorn",
]

[dependency-groups]
dev = [
    "devtools",
    "httpx",
    "ipython",
    "mypy==1.10.1",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "sqlalchemy[mypy]",
    "types-pyyaml",
    "types-redis",
    "types-requests",
    "vulture",
]
docs = [
    "mkdocstrings[python]",
    "mkdocs-glightbox",
    "mkdocs-literate-nav",
    "mkdocs-material",
]

[tool.ariadne-codegen]
schema_path = "schema.graphql"
queries_path = "schema.graphql"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I"]
ignore = ["E203", "E701"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"backend/test/**" = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["medconb"]